--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <h2 class="main-title">Become a BBQ master!</h2>
     <p class="main-sub">Register Today</p>
     <p>BBQ isn't just standing in front of your grill with it on full blast and hoping for the best. It's an art! One way to speed up the process is to learn from the best. You can do just that by signing up for this free webinar!</p>
-    <!-- form will go here -->
+    <form class="email-collector" action="#" method="POST">
+      <input type="text" id="fname" placeholder="first name" aria-label="first name" required>
+      <input type="email" id="email" placeholder="email" aria-label="email address" required>
+      <br>
+      <button class="btn btn-primary" type="submit">register</button>
+    </form>
     <p class="fine-print">We'll never share your information without your permission</p>
   </main>
 </body>
